# oscillare

./: .gitignore  Oscillare.exe - Shortcut.lnk  README.md  oschader.cabal  oscillare.cabal  oscillare.el  saved.osc  scratch.hs  scratch.osc  stack.yaml  tsnedata.txt  tsneoutput.txt  tsneoutputwin.txt  tsnerotatingdata.txt  tsnerotatingoutput.txt  web_users_2000_2.txt  workshop.osc
TD/: CrashAutoSave.toe  FunctionalDesigner.24.toe  FunctionalDesigner.26.toe  FunctionalDesigner.27.toe  FunctionalDesigner.28.toe  FunctionalDesigner.29.toe  FunctionalDesigner.30.toe  FunctionalDesigner.31.toe  FunctionalDesigner.32.toe  FunctionalDesigner.33.toe  FunctionalDesigner.34.toe  FunctionalDesigner.35.toe  FunctionalDesigner.36.toe  FunctionalDesigner.37.toe  FunctionalDesigner.38.toe  FunctionalDesigner.39.toe  FunctionalDesigner.40.toe  FunctionalDesigner.41.toe  FunctionalDesigner.42.toe  FunctionalDesigner.43.toe  FunctionalDesigner.44.toe  FunctionalDesigner.toe  Oscillare.0.toe  Oscillare.1.toe  Oscillare.10.toe  Oscillare.11.toe  Oscillare.2.toe  Oscillare.3.toe  Oscillare.4.toe  Oscillare.5.toe  Oscillare.6.toe  Oscillare.7.toe  Oscillare.8.toe  Oscillare.9.toe  PS122.10.toe  PS122.11.toe  PS122.9.toe  TouchDesignerCrash099.x64.2017.35560.1.dmp  TouchDesignerCrash099.x64.2017.35560.2.dmp  TouchDesignerCrash099.x64.2018.20100.1.dmp  (+36 more)
TD/scripts/: classes.py  distance_dat.py  hooks.py  midiinclock.py  osc_callbacks.py  scripts.py  sendleddata.py  tcpipinput.py
TD/scripts/Visuals/: crosshatch.frag  diff.frag  rgbsplit.frag
TD/toxes/: relay.tox  tidal_patterns.tox
TD/toxes/Visuals/: flockingGpu.tox  navier.tox  particlemover.tox
TD/toxes/Visuals/glsl/: force_frag.glsl
TD/videos/: businesscard.tif
app/: .#Main.hs  .#Stream.hs  Graphics.hs  Main.hs  OscParser.hs  Params.hs  Paths.hs  Pattern.hs  Stream.hs  Tempo.hs  Time.hs  Utils.hs
app/shaders/: basic.frag  passthrough.vert  sin.frag
patterns/: audiodata_acid_blur_rotate.osc  audiodata_lines_down.osc  circle_flocking.osc  color_dots_fade_audioData.osc  color_sine_audioData.osc  fun_rotation.frag  spinny_color_spiral.osc
serving/: Network.hs  Oscillare.exe - Shortcut.lnk
src/: Midi.hs  OSCServer.hs  Osc.hs  Oscillare.hs  Pattern.hs  Program.hs  Runner.hs  Server.hs  State.hs  Uniform.hs  Visuals.hs
src/static/: index.html  main.js  nexusUI.min.js  osc.min.js  styles.css
test/: Spec.hs
