name:                oschader
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/oschader#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Osc
  build-depends: aeson >=0.10.0
               , base >= 4.7 && < 5
               , base-prelude
               , bytestring >= 0.10
               , hosc >= 0.15
               , vector >= 0.11
  default-language:    Haskell2010

executable oschader-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , bytestring >= 0.10
               , containers >= 0.5
               , GLFW-b >= 1.4
               , hosc >= 0.15
               , luminance 
               , mtl
               , oschader
               , parsec
               , resourcet
               , text >= 1.2
               , time
               , transformers
  default-language:    Haskell2010

test-suite oschader-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , oschader
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/oschader
