name:                oscillare
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/oschader#readme
license:             BSD3
license-file:        LICENSE
author:              Ulysses Popple
maintainer:          ulysses.popple@gmail.com
copyright:           2016 Ulysses Poppl
category:            Art
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Osc, Oscillare
  build-depends: aeson >=0.10.0
               , base >= 4.7 && < 5
               , base-prelude
               , bytestring >= 0.10
               , containers >= 0.5
               , hosc >= 0.15
               , lens >= 4.13
               , mtl
               , network >= 2.6
               , parsec
               , resourcet
               , text >= 1.2
               , time
               , transformers
               , vector >= 0.11
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ulyssesp/oscillare
