name:                oscillare
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/oschader#readme
license:             BSD3
license-file:        LICENSE
author:              Ulysses Popple
maintainer:          ulysses.popple@gmail.com
copyright:           2016 Ulysses Poppl
category:            Art
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OSCServer,
                       Visuals,
                       Server
  build-depends: base >= 4.7 && < 5
               , LambdaDesigner
               , aeson
               , bytestring
               , bytestring-trie
               , filepath
               , fsnotify
               , hint
               , hosc
               , lens
               , matrix
               , network
               , split
               , transformers
  default-language:    Haskell2010

executable Oscillare
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
  build-depends:       base
                     , oscillare
                     , LambdaDesigner
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ulyssesp/oscillare
